exports[`radialGradient properly overrides the fallback when it is passed 1`] = `
Object {
  "backgroundColor": "#FFF",
  "backgroundImage": "radial-gradient(farthest-corner at 45px 45px, #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%)",
}
`;

exports[`radialGradient returns the correct object when only passed two color stops, including parsed fallback with no percentage 1`] = `
Object {
  "backgroundColor": "#fff",
  "backgroundImage": "radial-gradient(#fff, #000)",
}
`;

exports[`radialGradient returns the correct object when passed extent and shape 1`] = `
Object {
  "backgroundColor": "#00FFFF",
  "backgroundImage": "radial-gradient(ellipse farthest-corner at 45px 45px, #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%)",
}
`;

exports[`radialGradient returns the correct object when passed extent, shape, and position, including parsed fallback with percentage 1`] = `
Object {
  "backgroundColor": "#00FFFF",
  "backgroundImage": "radial-gradient(center ellipse farthest-corner at 45px 45px, #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%)",
}
`;

exports[`radialGradient returns the correct object when passed just extent 1`] = `
Object {
  "backgroundColor": "#00FFFF",
  "backgroundImage": "radial-gradient(farthest-corner at 45px 45px, #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%)",
}
`;

exports[`radialGradient should throw an error when not passed a value for colorStops 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/radialGradient.js --%c

radialGradient %cexpects a 1st parameter of type array. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#radialGradient%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`radialGradient should throw an error when not provided any parameters 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/radialGradient.js --%c

radialGradient %cexpects a minimum of %c1 parameter%c. However, you passed %c0 parameters%c.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#radialGradient%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: red",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- mixins/radialGradient.js --%c

radialGradient %cexpects a 1st parameter of type array. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#radialGradient%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`radialGradient should throw an error when passed a non-array value for colorStops 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/radialGradient.js --%c

radialGradient %cexpects a 1st parameter of type array. However, you passed true(boolean) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#radialGradient%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`radialGradient should throw an error when passed a non-string value for extent 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/radialGradient.js --%c

radialGradient %cexpects a 2nd parameter of type string. However, you passed true(boolean) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#radialGradient%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`radialGradient should throw an error when passed a non-string value for fallback 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/radialGradient.js --%c

radialGradient %cexpects a 3rd parameter of type string. However, you passed true(boolean) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#radialGradient%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`radialGradient should throw an error when passed a non-string value for position 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/radialGradient.js --%c

radialGradient %cexpects a 4th parameter of type string. However, you passed true(boolean) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#radialGradient%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`radialGradient should throw an error when passed a non-string value for shape 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/radialGradient.js --%c

radialGradient %cexpects a 5th parameter of type string. However, you passed true(boolean) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#radialGradient%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`radialGradient should throw an error when passed an array with less than two values for colorStops 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/radialGradient.js --%c

radialGradient %cexpects a 1st parameter of type array. However, you passed #00FFFF 0%(object) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#radialGradient%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
